--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <title>Portfolio: Ronak Paul</title>
+    <title>Ronak Paul</title>
   </head>
   <body>
     <div id="root"></div>
