added favicon file paths in manifest

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="description" content="Ronak Paul's Personal Portfolio" />
+    <meta
+      name="description"
+      content="Ronak Paul's Portfolio. Get to know about Ronak Paul's Skill, Projects, Youtube Videos and also the blogs written by him on various topics like web3, development,backend,frontend etc"
+    />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
